added new stuff

--- a/images.html
+++ b/images.html
@@ -36,17 +36,11 @@
     </header>
 
     <main>
-        <div class="container"> 
-            <div class="row">
-                <div class="col mt-5" id="formstuff">
-                    <div>
-                        <h5>google</h5>
-                        <input class="btn" id="submitBtn" type="submit">
-                        <h5>w3school</h5>
-                        <input class="btn" id="submitBtn2" type="submit">
-                        <h5>images page</h5>
-                        <input class="btn" id="submitBtn3" type="submit">
-                    </div>
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col">
+                    <img src="images/gwagon.jpg" alt="gwagon">
+                    <img src="images/rolrocy.jpg" alt="gwagon">
                 </div>
             </div>
         </div>
@@ -60,7 +54,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="scripts/site.js"></script>
 </body>
 
 </html>
